--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,10 +11,91 @@ Author URI: www.ifwebs.com
 
 // CORES
 $Branco: #ffffff;
-$Preto: #000000;
+$Preto: #363636;
+$Azul: #3c68d0;
+$AzulEscuro: #1e4195;
+$Cinza: #797979;
 
 //Fontes
 
+@font-face {
+  font-family: 'Myriad Pro Regular';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Myriad Pro Regular'), url('../fonts/MYRIADPRO-REGULAR.woff') format('woff');
+  }
+  
+
+  @font-face {
+  font-family: 'Myriad Pro Condensed';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Myriad Pro Condensed'), url('../fonts/MYRIADPRO-COND.woff') format('woff');
+  }
+  
+
+  @font-face {
+  font-family: 'Myriad Pro Condensed Italic';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Myriad Pro Condensed Italic'), url('../fonts/MYRIADPRO-CONDIT.woff') format('woff');
+  }
+  
+
+  @font-face {
+  font-family: 'Myriad Pro Light';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Myriad Pro Light'), url('../fonts/MyriadPro-Light.woff') format('woff');
+  }
+  
+
+  @font-face {
+  font-family: 'Myriad Pro Semibold';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Myriad Pro Semibold'), url('../fonts/MYRIADPRO-SEMIBOLD.woff') format('woff');
+  }
+  
+
+  @font-face {
+  font-family: 'Myriad Pro Semibold Italic';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Myriad Pro Semibold Italic'), url('../fonts/MYRIADPRO-SEMIBOLDIT.woff') format('woff');
+  }
+  
+
+  @font-face {
+  font-family: 'Myriad Pro Bold Condensed';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Myriad Pro Bold Condensed'), url('../fonts/MYRIADPRO-BOLDCOND.woff') format('woff');
+  }
+  
+
+  @font-face {
+  font-family: 'Myriad Pro Bold';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Myriad Pro Bold'), url('../fonts/MYRIADPRO-BOLD.woff') format('woff');
+  }
+  
+
+  @font-face {
+  font-family: 'Myriad Pro Bold Italic';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Myriad Pro Bold Italic'), url('../fonts/MYRIADPRO-BOLDIT.woff') format('woff');
+  }
+  
+
+  @font-face {
+  font-family: 'Myriad Pro Bold Condensed Italic';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Myriad Pro Bold Condensed Italic'), url('../fonts/MYRIADPRO-BOLDCONDIT.woff') format('woff');
+  }
 
 // FUNCOES -=================///
 %center {
@@ -83,12 +164,22 @@ $Preto: #000000;
   -webkit-text-shadow: rgba(0,0,0,.01) 0 0 1px;
   text-shadow: rgba(0,0,0,.01) 0 0 1px;
   outline: none;
+  font-family: 'Myriad Pro Regular';
 }
 a{
   &:hover, &:active, &:focus{
     text-decoration: none;
     background-color: transparent;
   }
+}
+h2{
+  font-family: 'Myriad Pro Bold';
+  font-size: 70px;
+  letter-spacing: -2px;
+  margin-bottom: 0px;
+}
+h3{
+  font-size: 45px;
 }
 /* --------------------- DEFAULT --------------------- */
 body {
@@ -130,9 +221,198 @@ img{
   text-align:left;
   margin-right:-4px;
 }
+.bt{
+  padding: 15px 40px 12px;
+  border-radius: 20px;
+  font-size: 30px;
+  font-family: 'Myriad Pro Bold';
+  @include trans(.2s)
+}
+.bt-whats{
+  background-color: #2dc164;
+  color: $Branco;
+  &:hover{
+    color: $Branco;
+    background-color: #1a713a;
+    @include trans(.2s)
+  }
+}
+.bt-01{
+  background-color: $AzulEscuro;
+  color: $Branco;
+  &:hover{
+    color: $AzulEscuro;
+    background-color: #d3e0ff;
+    @include trans(.2s)
+  }
+}
 /* --------------------- HEADER --------------------- */
-/* --------------------- WELCOME --------------------- */
-/* --------------------- PRE-FOOTER --------------------- */
+header{
+  background-color: $Azul;
+}
+/* --------------------- SECTIONS --------------------- */
+.sc{}
+.sc-02{
+  background-color: $Azul;
+  h2{
+    color: $Branco;
+  }
+  h3{
+    color: #d3e0ff;
+    font-size: 60px;
+    font-family: 'Myriad Pro Bold';
+  }
+  input{
+    height: 70px;
+    border-radius: 15px;
+    width: 380px;
+    text-indent: 15px;
+    font-size: 48px;
+    font-family: 'Myriad Pro Bold';
+    &::placeholder{
+      color: $Preto;
+    }
+    &::-ms-input-placeholder{
+      color: $Preto;
+    }
+  }
+  button{
+    background-color: $AzulEscuro;
+    border-radius: 15px;
+    height: 70px;
+    padding: 0 25px;
+    margin-left: 10px;
+    position: relative;
+    top: -10px;
+    img{
+      height: 45px;
+    }
+  }
+  p{
+    color: $Branco;
+    font-family: 'Myriad Pro Regular';
+    font-size: 24px;
+    a{
+      color: $Branco;
+      font-weight: bold;
+      text-decoration: underline;
+    }
+    i{
+      font-family: 'Myriad Pro Semibold Italic';
+      font-size: 25px;
+      color: #d3e0ff;
+    }
+  }
+}
+.sc-03{
+  background-color: #eeebeb;
+  .download{
+    a{
+      display: inline-block;
+      img{
+        height: 45px;
+      }
+    }
+  }
+  h2{
+    color: $Preto;
+  }
+  h3{
+    color: $Cinza;
+  }
+  .txt1{
+    color: $Azul;
+    font-size: 18px;
+    margin-bottom: 0;
+  }
+  .txt2{
+    color: $AzulEscuro;
+    font-size: 30px;
+    font-family: 'Myriad Pro Bold';
+    line-height: 32px;
+  }
+  .txt3{
+    color: $Cinza;
+    font-size: 30px;
+    font-family: 'Myriad Pro Bold';
+    line-height: 32px;
+  }
+}
+.sc-04{
+  h2{
+    color: $Preto;
+  }
+  h3{
+    color: $Cinza;
+    font-size: 42px;
+  }
+  .depoimentos{
+    overflow: hidden;
+  }
+  .card-depo{
+    padding: 20px;
+    box-shadow: 0px 0px 12px rgba(0,0,0,.1);
+    height: 300px;
+    max-width: 380px;
+    border-radius: 15px;
+    margin: 10px;
+  }
+  .card-1{
+    padding: 0;
+    img{
+      height: 100%;
+    }
+  }
+  .card-2{
+    text-align: center;
+    img{
+      display: block;
+      margin: 0px auto 20px;
+      height: 20px;
+    }
+    p{
+      font-family: 'Myriad Pro Semibold Italic';
+      font-size: 20px;
+    }
+  }
+}
 /* --------------------- FOOTER --------------------- */
+footer{
+  background-color: $Preto;
+  nav{
+    ul{
+      li{
+        display: inline-block;
+        margin: 0 8px;
+        a{
+          color: $Cinza;
+          @include trans(.2s);
+          &:hover{
+            color: $Branco;
+            @include trans(.2s);
+          }
+        }
+      }
+    }
+  }
+  .social{
+    width: auto;
+    display: inline-block;
+    img{
+      margin: 10px 5px;
+      opacity: .5;
+      @include trans(.2s);
+      &:hover{
+        @include trans(.2s);
+        opacity: 1;
+      }
+    }
+    border-bottom: 1px solid $Cinza;
+  }
+  .txt-footer{
+    color: $Cinza;
+    font-size: 12px;
+  }
+}
 /* --------------------- DEFAULT --------------------- */
 /* --------------------- DEFAULT --------------------- */
